--- a/index.html
+++ b/index.html
@@ -1,18 +1,57 @@
 <!DOCTYPE html>
 <html>
   <head>
+   <title>Sakurai-Portfolio</title>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="description" content="説明文です">
-    <meta charset="utf-8">
-    <!-- 以下の1行で外部のCSSファイルを読み込みます -->
+     <meta charset="utf-8">
+<!-- CSSファイルの読み込み -->
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body> 
 
-    <header> 
+
+  
+<body> 
+  <header>
+    <div class="header-logo">
+      <a href="">
+        <img src="image/logo.png" alt="ロゴ">
+      </a>
+    </div>
+
+    <!-- 常に表示されるボタン -->
+    <div class="menu-toggle" id="menu-toggle">MENU</div>
+  </header>
+
+  <!-- カード型メニュー -->
+  <div class="menu-overlay" id="menu">
+    <div class="menu-panel">
+      <ul>
+        <li><a href="#top">TOP</a></li>
+        <li><a href="#profile">PROFILE</a></li>
+        <li><a href="#production">PRODUCTION</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+      </ul>
+    </div>
+  </div>
+
+<!-- メインビジュアル -->
+<section>
+
+
+
+
+</section>
+
+
+
+
       <div id="back-image">
       <h1>櫻井ポートフォリオ</h1> 
       <p>制作物をここに掲載します。</p>
       </div>
+
+
 
 
       <div id="link-box">
@@ -27,8 +66,9 @@
         <li>2027年</li>
         <li>Webサイト1</li>
       </ul>
-      </div>
+    </div>
 
-    </header>
+    <!-- JavaScriptファイルの読み込み -->
+  <script src="js/menu.js"></script>
   </body>
 </html>
