--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="header-logo">
       <a href="">
-        <img src="image/rogo.png" alt="ロゴ">
+        <img src="image/logo.png" alt="ロゴ">
       </a>
     </div>
 
