--- a/index.html
+++ b/index.html
@@ -12,18 +12,25 @@
 
   
 <body> 
-  <header>
+ 
+
+<!-- メインビジュアル -->
+<section id="top">
+ <header>
     <div class="header-logo">
       <a href="">
         <img src="image/logo.png" alt="ロゴ">
       </a>
     </div>
 
-    <!-- 常に表示されるボタン -->
+    <!-- メニューボタン -->
     <div class="menu-toggle" id="menu-toggle">MENU</div>
   </header>
+</section>
 
-  <!-- カード型メニュー -->
+
+
+  <!-- メニューの一覧リンク -->
   <div class="menu-overlay" id="menu">
 
     <div class="menu-panel">
@@ -36,14 +43,12 @@
     </div>
   </div>
 
-<!-- メインビジュアル -->
-<section>
 
 
-
+ <!-- プロフィール -->
+<section id="profile">
 
 </section>
-
 
 <!--
 
