--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <!-- メニューボタン -->
     <div class="menu-toggle" id="menu-toggle">MENU</div>
   </header>
+
+  <p id="top-comment">ーＮｅｗｓー</p>
 </section>
 
 
